<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discoverFragment"
        android:title="@string/nav_discover"
        android:icon="@drawable/ic_launcher_foreground" />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/nav_search"
        android:icon="@drawable/ic_launcher_foreground" />
    <item
        android:id="@+id/addReviewFragment"
        android:title="@string/nav_add_review"
        android:icon="@drawable/ic_launcher_foreground" />
    <item
        android:id="@+id/feedFragment"
        android:title="@string/nav_feed"
        android:icon="@drawable/ic_launcher_foreground" />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_launcher_foreground" />
</menu>
